--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,34 +1,29 @@
+/* Whole Site */
 * {
 	margin: 0;
 	padding: 0;
 	scroll-behavior: smooth;
-}
-
-.content {
-	font-family: Arial, sans-serif;
-	font-size: 1.2em;
-	padding: 0 5em;
+	--basicblue: #0a5a92;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .quote {
 	padding: 3em 8em;
 	text-align: center;
-	background-color: #0a5a92;
-	color: #fff;
-	margin: 0em -6rem;
-	font-size: 1.2em;
-	max-width: 100vw;
-	overflow: hidden;
-}
 
-.quote p span {
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-size: 1em;
+	font-size: 1.2em;
 }
 
 .splash {
 	height: 100vh;
 	z-index: -1;
+}
+.half {
+	height: 50vh;
+}
+
+.quarter {
+	top: 25% !important;
 }
 
 .splashText {
@@ -44,7 +39,7 @@
 	text-shadow: 0 0 0.5em #00000066;
 }
 
-.whatWeDo {
+.splitSection {
 	margin: 3em;
 	text-align: left;
 	display: flex;
@@ -52,12 +47,41 @@
 	align-items: center;
 }
 
-.wwdText {
+.reverse {
+	flex-direction: row-reverse;
+	text-align: right;
+}
+
+.splitText {
 	font-size: 1.2em;
 	width: 80%;
 	padding: 10em 5em 10em 5em;
 }
 
-.wwdImage {
+.splitImage {
 	width: 50em;
+}
+
+.columnGroup {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	height: 20vh;
+
+	max-width: 100vw;
+}
+
+.column {
+	padding: 1em;
+	text-align: center;
+}
+
+.blue {
+	background-color: var(--basicblue);
+	color: #fff;
+}
+
+.bio {
+	padding: 4rem;
+	font-size: 1.2rem;
 }
