--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,6 +3,8 @@ footer {
 	background-color: var(--basicblue);
 	color: #ffffff;
 	justify-content: space-between;
+	align-content: center;
+	align-items: center;
 	padding: 3em;
 	font-size: 1.2em;
 }
@@ -17,4 +19,13 @@ footer a {
 	justify-content: space-around;
 	align-items: center;
 	flex-direction: column;
+}
+
+@media (max-width: 1000px) {
+	footer {
+		padding: 2em;
+	}
+	footer * {
+		font-size: 0.85em;
+	}
 }
