--- a/src/components/main.css
+++ b/src/components/main.css
@@ -10,7 +10,6 @@
 .quote {
 	padding: 3em 8em;
 	text-align: center;
-
 	font-size: 1.2em;
 }
 
@@ -47,6 +46,7 @@
 	color: #fff;
 	text-align: center;
 	text-shadow: 0 0 0.5em #00000066;
+	z-index: 3;
 }
 
 .splitSection {
@@ -56,7 +56,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-content: space-between;
-
 	align-items: center;
 }
 
@@ -71,7 +70,7 @@
 }
 
 .splitImage img {
-	height: 50em;
+	height: 30em;
 }
 
 .columnGroup {
@@ -79,7 +78,6 @@
 	justify-content: space-around;
 	align-items: center;
 	height: 20vh;
-
 	max-width: 100vw;
 }
 
@@ -88,16 +86,48 @@
 	text-align: center;
 }
 
+.grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+}
+
 .blue {
 	background-color: var(--basicblue);
 	color: #fff;
 }
 
 .bio {
-	padding: 4rem;
-	font-size: 1.2rem;
+	padding: 4em;
+	font-size: 1.2em;
 }
 
 .small img {
 	height: 20em;
+}
+
+@media (max-width: 1000px) {
+	* {
+		font-size: 14px;
+	}
+
+	.quote {
+		padding: 2em;
+	}
+
+	.splitImage {
+		width: 6em;
+		height: auto;
+	}
+
+	.splitSection {
+		padding: 2em;
+	}
+
+	.splitText {
+		margin: 1em;
+	}
+
+	.splashText * {
+		font-size: 0.85em;
+	}
 }
